corrected temp url

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # Site settings (baseurl must end with a trailing slash!)
-baseurl = "http://glennhasawebsite.com/Vagabondians/"
+baseurl = "http://glennhasa.website/Vagabondians/"
 languageCode = "en-us"
 title = "Vagabondians"
 theme = "grid-side"
