--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ disqusShortname = "vagabondians"
 
 # The theme supports menus with up to one submenu per menu item
 # The menu name must be "Main"
-SectionPagesMenu = "Main"
+# SectionPagesMenu = "Main"
 
 [[Menu.Main]]
     name = "About Us"
